--- a/docs/ssjs/ssjs-style-guide.mdx
+++ b/docs/ssjs/ssjs-style-guide.mdx
@@ -421,7 +421,7 @@ For complex scripts, it might be a good idea to create few different levels of s
 
 /* ---------------------- 3.2. Authentication ----------------------- */
 
-/* 3.2.1. Upsert Logging Data Extensions */
+/* 3.2.1. Build token request payload */
 ```
 
 ### 3. Documenation Comments
