Initial setup for AMPScript style guide

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -2,13 +2,13 @@
 id: docs-and-snippets
 title: Docs & Snippets
 slug: /
-description: SSJS + JS + SQL + SFMC Config documentation and code snippets that I find useful for developing Marketing Automation
+description: SSJS + JS + AMPScript + SQL + SFMC Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud
 ---
 
 import TOCInline from '@theme/TOCInline';
 import { LeadText } from '../src/components/LeadText.js';
 
-<LeadText content="SSJS + JS + SQL + SFMC Config documentation and code snippets that I find useful for developing Marketing Automation." />
+<LeadText content="SSJS + JS + AMPScript + SQL + SFMC Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud." />
 
 :::tip Table of Contents
 
@@ -56,6 +56,25 @@ In this part, I am gathering selected elements of modern vanilla JavaScript that
 - [Tailor with Data](./usecase/tailor-with-data.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/js/js-if-and-switch">Read about JavaScript</a>
+
+## AMPScript
+
+AMPScript is a proprietary scripting language in Salesforce Marketing Cloud along with [SSJS](#Server-Side-JavaScript). Out of the two, it is simpler and more performant, but too limited for complex solutions. Good starting point for marketers without development experience. Best option for scripting in messaging.
+
+### AMPScript Documentation
+
+- [Style Guide](./ampscript/ampscript-style-guide.mdx)
+- [Performance](./ssjs/ssjs-vs-ampscript-performance.mdx)
+
+### AMPScript Use Cases
+
+- [Solve with Cloud Apps](./usecase/sfmc-cloud-apps.mdx)
+
+### AMPScript Snippets
+
+- [AMPScript in SSJS](./ssjs/ssjs-snippet-ampscript-in-ssjs.mdx)
+
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/ampscript/ampscript-style-guide">Read about AMPScript</a>
 
 ## SFMC SQL
 
