Article sidebar name update

--- a/docs/ssjs/ssjs-style-guide.mdx
+++ b/docs/ssjs/ssjs-style-guide.mdx
@@ -1,7 +1,7 @@
 ---
 id: ssjs-style-guide
 title: SSJS Style Guide
-sidebar_label: SSJS Style Guide
+sidebar_label: Style Guide
 description: Script with style. Readable code is a few rules & best practices away
 ---
 
