--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -25,8 +25,8 @@ SSJS is an XX-century-version of JavaScript paired with proprietary libraries cr
 - [If & Switch](./ssjs/ssjs-if-and-switch.mdx)
 - [Loops](./ssjs/ssjs-loops.mdx)
 - [Debugging](./ssjs/debugging-ssjs.mdx)
-- [Performance](./ssjs/ssjs-vs-ampscript-performance.mdx)
 - [Style Guide](./ssjs/ssjs-style-guide.mdx)
+- [Performance](./ssjs/ssjs-vs-ampscript-performance.mdx)
 
 ### SSJS Use Cases
 
@@ -92,7 +92,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 - [Date Functions](./sql/sfmc-sql-date-functions.mdx)
 - [Numeric Functions](./sql/sfmc-sql-numeric-functions.mdx)
 - [Conversion Functions](./sql/sfmc-sql-conversion-functions.mdx)
-- [SQL Style Guide](./sql/sfmc-sql-style-guide.mdx)
+- [Style Guide](./sql/sfmc-sql-style-guide.mdx)
 
 ### SQL Snippets
 
