Article sidebar name update

--- a/docs/sql/sfmc-sql-style-guide.mdx
+++ b/docs/sql/sfmc-sql-style-guide.mdx
@@ -1,7 +1,7 @@
 ---
 id: sfmc-sql-style-guide
 title: SFMC SQL Style Guide
-sidebar_label: SQL Style Guide
+sidebar_label: Style Guide
 description: Query with style. Readable, bug-free code is a few shifts & spaces away.
 ---
 
