Updated information on brackets for column names

--- a/docs/sql/sfmc-sql-select.mdx
+++ b/docs/sql/sfmc-sql-select.mdx
@@ -28,7 +28,7 @@ SELECT
     , EmailAddres
 ```
 
-If a column name contains a space or is a SQL's reserved keyword, you need to capture it with squared brackets:
+If a column name contains a space, hyphen or is a SQL's reserved keyword, you need to capture it with squared brackets:
 
 ```sql {4} title="Let's add another column with whitespace in its name"
 SELECT
