Small fixes to whitespace

--- a/docs/ssjs/ssjs-style-guide.mdx
+++ b/docs/ssjs/ssjs-style-guide.mdx
@@ -46,13 +46,13 @@ Applying the rules listed below is easy when you write the code and remember its
 /* ✅ Descriptive and suggesting boolean data type */
 var isTrackingSuppressed = false;
 
-/* ❌ Name neither describes the variable purpose nor suggest its data type*/
+/* ❌ Name neither describes the variable purpose nor suggest its data type */
 var value = false;
 
 /* ✅ Descriptive and suggesting date data type */
 var trackingSupressionStartDate = new Date();
 
-/* ❌ Name neither describes the variable purpose nor suggest its data type*/
+/* ❌ Name neither describes the variable purpose nor suggest its data type */
 var supressed = new Date();
 ```
 
@@ -74,7 +74,7 @@ function write(d, v) {
 };
 ```
 
-### JS Variables, Functions & Methods Leter Case
+### JS Variables, Functions & Methods Letter Case
 
 __Use `camelCase` for all elements of JS syntax.__
 
