--- a/docs/ssjs/ssjs-snippet-mobileconnect-phone-change.mdx
+++ b/docs/ssjs/ssjs-snippet-mobileconnect-phone-change.mdx
@@ -55,7 +55,7 @@ With that two information, [`Init`](https://developer.salesforce.com/docs/atlas.
 </script>
 ```
 
-That's it. Running this snippet - even in a Cloud Page or Code Resource - will change the Mobile Number assigned to the Contact.
+That's it. Running this snippet - even in a Cloud Page or Code Resource - will change the Mobile Number assigned to the Contact. Just be sure to publish the page and load it. The Web Studio Preview won't work.
 
 :::note You Should Know
 
